# servant-to-elm-example

./: README.md  docker-compose.yml  servant-to-elm-example.code-workspace
.github/workflows/: build.yml  frontend.yml
backend/: Dockerfile  README.md  backend.cabal  package.yaml  servant-to-elm-example.cabal  stack.yaml  weeder.dhall
backend/codegen/: Main.hs
backend/src/: Codegen.hs  CodegenMain.hs  Database.hs  DerivingVia.hs  DomainModel.hs  Main.hs  Server.hs  StubData.hs
frontend/: .gitignore  Dockerfile  build-prod.sh  elm.json  index.html  index.src.html  init.ts  main.js  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/configs/: nginx.conf
frontend/review/: elm.json
frontend/review/src/: ReviewConfig.elm
frontend/src/: Api.elm  ApiBook.elm  Config.elm  Editor.elm  Helpers.elm  Main.elm  MainTest.elm  Search.elm
frontend/src/Api/: Api.elm  Author.elm  Book.elm  Search.elm
frontend/static/: index.html  main.css
