cabal-version:       3.0
name:                servant-to-elm-example
version:             0.1.0.0
description:         Fullstack web app, an example of servant-to-elm
homepage:            https://github.com/githubuser/servant-to-elm-example#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Vladimir Logachev
maintainer:          logachev.dev@ya.ru
copyright:           2021 Vladimir Logachev 
category:            Web
build-type:          Simple

common deps
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , directory
    , elm-syntax
    , filepath
    , generics-sop
    , haskell-to-elm
    , mtl
    , prettyprinter
    , servant-server
    , servant-to-elm 
    , sqlite-simple
    , text
    , unordered-containers
    , wai-cors
    , wai-extra
    , warp
  default-extensions: 
    NoMonomorphismRestriction
    DuplicateRecordFields
    OverloadedStrings
  ghc-options:
    -- Enable all possible warnings as errors
    -Werror
    -Weverything
    -- Intentionally ignore some warnings
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-unsafe
  default-language:    Haskell2010    

executable server
  import: deps
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Database DerivingVia DomainModel Server StubData

executable codegen
  import: deps
  main-is: CodegenMain.hs
  hs-source-dirs:      src 
  other-modules:      Codegen Database DerivingVia DomainModel Server StubData
